fixed burger alignment and added motion.svg animation

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -33,8 +33,8 @@ nav ul li {
 
 .bi.bi-list{
     display: none;
-
 }
+
 
 /*---- Media Query ----*/
 @media (max-width: 1000px) {
@@ -59,18 +59,17 @@ nav ul li {
         bottom: 0;
         background: rgba(8, 0, 58, 0.945);
         z-index: -1;
-        width: 200px;
-        padding-top: 70px;
+        width: 250px;
+        padding-top: 50px;
         transition: 0.5s;
     box-shadow: 0 0 20px 2px wheat;
 
     }
     nav ul li{
-        display: block;
+        display: flex;
+        justify-content: center;
         margin: 25px 40px;
-        .btn{
-            margin-left: -20px;
-        }
+        padding-bottom: 20px;
     }
     .bi.bi-list{
     display: block;
